--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -29,8 +29,7 @@
     <header id="about-me" class="header">
             <div class="header-wrapper">
                 <h1 class="header__title">
-                    <strong>Hi, my name is <em>Maksim</em></strong>
-                    a Frontend developer
+                    <strong>Hi, my name is <em>Maksim</em></strong> a Frontend developer
                 </h1>
                 <div class="header-text">
                     <p>with passion for learning and creating.</p>
@@ -44,8 +43,12 @@
         <div class="conteiner about-me-cont">
             <div class="about__me">
                 <div class="about__text__content">
-                    <h2 class="text__content__h">About me</h2>
-                    <p id="project" class="text__content">I'm a novice front-end developer who creates user-friendly and modern web interfaces. I am proficient in HTML, CSS, JavaScript and React to make interactive and responsive websites. I know how to work with Figma, which helps me to translate design into code more accurately. I strive to develop in IT, study new technologies and apply them in real projects. This portfolio contains my work, where I demonstrate my skills and progress.</p>
+                    <h2 class="text__content__h">Обо мне</h2>
+                    <div class="container__text__content">
+                        <p id="project" class="text__content">Я начинающий фронтенд-разработчик, специализирующийся на создании удобных и современных пользовательских интерфейсов.</p>
+                        <p id="project" class="text__content">Я постоянно стремлюсь к профессиональному развитию, активно изучаю новые технологии и фреймворки и применяю их в практических проектах. Готов к интересным задачам и возможности внести свой вклад в развитие IT-продуктов.</p>
+                        <p id="project" class="text__content">В данном портфолио вы найдете примеры моих работ, которые наглядно демонстрируют мои текущие навыки и прогресс в освоении веб-разработки.</p>
+                    </div>
                 </div>
                 <div class="about__card">
                     <img class="about__photo" src="img/photo_5215327604863792342_m 1.png" alt="">
@@ -73,7 +76,7 @@
         </div>
 
         <div class="conteiner">
-            <h2 class="projects__h">Projects</h2>
+            <h2 class="projects__h">Проекты</h2>
             <div class="projects">
                 <div class="project__card">
                     <img src="img/Hackathon.png" alt="">
@@ -84,7 +87,7 @@
                             <a target="_blank" href="https://hackathon-five-nu.vercel.app/"><img src="img/link-arr.png" alt=""></a>
                         </div>
                     </div>
-                    <p class="projects__card__text">This project was developed to participate in the International Programming Olympiad</p>
+                    <p class="projects__card__text">Данный проект — это конкурсная работа, подготовленная для Международной олимпиады по программированию</p>
                 </div>
 
                 <div class="project__card">
@@ -95,18 +98,51 @@
                         <a target="_blank" href="https://my-project-nine-tawny.vercel.app/"><img src="img/link-arr.png" alt=""></a>
                         </div>
                     </div>
-                    <p class="projects__card__text">This project was a convenient platform for purchasing games and subscriptions to these games</p>
+                    <p class="projects__card__text">Этот проект был разработан в качестве удобной платформой для покупки игр и подписок на эти игры</p>
                 </div>
 
                 <div class="project__card">
                     <img src="img/pakary.png" alt="">
                     <div class="card__h-link">
-                        <h2 class="project__card__h">Figma project</h2>
+                        <h2 class="project__card__h">Design Pakary</h2>
                         <div class="card__img">
                             <a target="_blank" href="https://www.figma.com/proto/6iso27zUQMq7dAPpI5ozp9/Untitled?page-id=0%3A1&node-id=2-2&p=f&viewport=153%2C867%2C0.08&t=EpexcUpfoYlPHl4p-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=2%3A2"><img src="img/link-figma.png" alt=""></a>
                         </div>
                     </div>
-                    <p class="projects__card__text">This figma mockup was designed as a learning exercise and also as a redesign for a bakery company</p>
+                    <p class="projects__card__text">Этот макет Figma был разработан в качестве учебного упражнения, а также в качестве редизайна для пекарни</p>
+                </div>
+
+                <div class="project__card">
+                    <img class="br-15" src="img/image 1.png" alt="">
+                    <div class="card__h-link">
+                        <h2 class="project__card__h">Veles</h2>
+                        <div class="card__img">
+                            <a target="_blank" href="https://veles-nine.vercel.app/"><img src="img/link-arr.png" alt=""></a>
+                        </div>
+                    </div>
+                    <p class="projects__card__text">Это демонстрационный проект, имитирующий работу реальной платформы для перевозок и крупных заказов</p>
+                </div>
+
+                <div class="project__card">
+                    <img class="br-15" src="img/image 2.png" alt="">
+                    <div class="card__h-link">
+                        <h2 class="project__card__h">Eurotour</h2>
+                        <div class="card__img">
+                            <a target="_blank" href="https://vercel.com/swissse1s-projects/eurotour/BAMJGZ5hBrpbjzG7Jxye1vseUAWh"><img src="img/link-arr.png" alt=""></a>
+                        </div>
+                    </div>
+                    <p class="projects__card__text">Это демонстрационный проект, имитирующий работу реальной платформы для поиска и бронирования проживания</p>
+                </div>
+
+                <div class="project__card">
+                    <img class="br-15" src="img/image 4.png" alt="">
+                    <div class="card__h-link">
+                        <h2 class="project__card__h">Stroy Expert</h2>
+                        <div class="card__img">
+                            <a target="_blank" href="https://stroyexpert.vercel.app/"><img src="img/link-arr.png" alt=""></a>
+                        </div>
+                    </div>
+                    <p class="projects__card__text">Этот сайт был разработан в рамках Олимпиады как цифровая платформа, для помощи в выборе жилья</p>
                 </div>
             </div>
         </div>
@@ -114,8 +150,8 @@
         <div class="conteiner">
             <div class="tool__cont">
                 <div id="skills" class="tools__content">
-                    <h2 class="tools__h">Main Tool I use</h2>
-                    <p class="tools__text">here are listed all the main tools that I own and use in my work to create dynamic web applications</p>
+                    <h2 class="tools__h">Основные навыки</h2>
+                    <p class="tools__text">Здесь перечислены все основные инструменты, которыми я владею и которые использую в своей работе для создания динамических веб-приложений</p>
                 </div>
                 <div class="tools__row">
                     <div class="card">
@@ -176,8 +212,8 @@
                 </div>
     
                 <div class="main__tools__content">
-                    <h2 class="tools__h">Tools I am learning</h2>
-                    <p class="tools__text">here are collected the tools that I am actively studying in order to use in my projects in the future</p>
+                    <h2 class="tools__h">В процессе изучения</h2>
+                    <p class="tools__text">Здесь собраны инструменты, которые я активно изучаю, чтобы использовать в своих проектах в будущем</p>
                 </div>
     
                 <div class="tools__row">
