--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                 <a href="./index.html" class="logo"><strong>Frontend</strong> portfolio</a>
                 <ul class="nav-list">
                     <li class="nav-list__item"><a href="#about-me"
-                            class="nav-list__link nav-list__link--active">About me</a></li>
+                            class="nav-list__link nav-list__link--active">Обо мне</a></li>
                             <li class="nav-list__item"><a href="#project"
-                                class="nav-list__link nav-list__link--active">Projects</a></li>
-                    <li class="nav-list__item"><a href="#skills" class="nav-list__link">Skills</a></li>
-                    <li class="nav-list__item"><a href="#contact" class="nav-list__link">Contacts</a></li>
+                                class="nav-list__link nav-list__link--active">Проекты</a></li>
+                    <li class="nav-list__item"><a href="#skills" class="nav-list__link">Навыки</a></li>
+                    <li class="nav-list__item"><a href="#contact" class="nav-list__link">Контакты</a></li>
                 </ul>
             </div>
         </div>
@@ -29,12 +29,12 @@
     <header id="about-me" class="header">
             <div class="header-wrapper">
                 <h1 class="header__title">
-                    <strong>Hi, my name is <em>Maksim</em></strong> a Frontend developer
+                    <strong>Меня зовут <em>Максим</em></strong> Frontend developer
                 </h1>
                 <div class="header-text">
-                    <p>with passion for learning and creating.</p>
+                    <p>Разрабатываю интуитивные и эффективные пользовательские интерфейсы</p>
                 </div>
-                <a href="./cv.pdf" class="btn" download="resume">Download resume</a>
+                <a href="./cv.pdf" class="btn" download="resume">Скачать резюме</a>
             </div>
     </header>
 
@@ -51,9 +51,9 @@
                     </div>
                 </div>
                 <div class="about__card">
-                    <img class="about__photo" src="img/photo_5215327604863792342_m 1.png" alt="">
+                    <img class="about__photo" src="img/photo.png" alt="">
                     <h2 class="about__h">Линьков Максим</h2>
-                    <p class="about__card__text projects__card__text">Front-end developer</p>
+                    <p class="about__card__text projects__card__text">Frontend developer</p>
                     <div class="about__btn__row">
                         <div class="about__btn">
                             <a class="about__link__github" target="_blank" href="https://github.com/swissse/My-project"><img src="img/mdi_github.png" alt="">
@@ -128,7 +128,7 @@
                     <div class="card__h-link">
                         <h2 class="project__card__h">Eurotour</h2>
                         <div class="card__img">
-                            <a target="_blank" href="https://vercel.com/swissse1s-projects/eurotour/BAMJGZ5hBrpbjzG7Jxye1vseUAWh"><img src="img/link-arr.png" alt=""></a>
+                            <a target="_blank" href="https://eurotour-lake.vercel.app/"><img src="img/link-arr.png" alt=""></a>
                         </div>
                     </div>
                     <p class="projects__card__text">Это демонстрационный проект, имитирующий работу реальной платформы для поиска и бронирования проживания</p>
@@ -199,6 +199,14 @@
                         <div class="card__content">
                             <h3 class="card__h">ExpressJS</h3>
                             <p class="card__text">Node Framework</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="img/git.png" alt="">
+                        <div class="card__content">
+                            <h3 class="card__h">Git</h3>
+                            <p class="card__text">Version control</p>
                         </div>
                     </div>
     
