--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
                     <div class="card__h-link">
                         <h2 class="project__card__h">Hackathon</h2>
                         <div class="card__img">
-                            <a target="_blank" target="_blank" href="https://www.figma.com/proto/VXEcaGlOdYDJs0ukKG22a0/Untitled?page-id=0%3A1&node-id=1-2&viewport=915%2C-11%2C0.26&t=odG2s7YkYVDdGYJo-1&scaling=min-zoom&content-scaling=fixed"><img src="img/link-figma.png" alt=""></a>
+                            <a target="_blank" href="https://github.com/FantyI/hackathon"><img src="img/icons8-github-32 (1).png" alt=""></a>
+                            <a target="_blank" href="https://www.figma.com/proto/VXEcaGlOdYDJs0ukKG22a0/Untitled?page-id=0%3A1&node-id=1-2&viewport=915%2C-11%2C0.26&t=odG2s7YkYVDdGYJo-1&scaling=min-zoom&content-scaling=fixed"><img src="img/link-figma.png" alt=""></a>
                             <a target="_blank" href="https://hackathon-five-nu.vercel.app/"><img src="img/link-arr.png" alt=""></a>
                         </div>
                     </div>
@@ -95,7 +96,8 @@
                     <div class="card__h-link">
                         <h2 class="project__card__h">Game store</h2>
                         <div class="card__img">
-                        <a target="_blank" href="https://my-project-nine-tawny.vercel.app/"><img src="img/link-arr.png" alt=""></a>
+                            <a target="_blank" href="https://github.com/swissse/All-games"><img src="img/icons8-github-32 (1).png" alt=""></a>
+                            <a target="_blank" href="https://my-project-nine-tawny.vercel.app/"><img src="img/link-arr.png" alt=""></a>
                         </div>
                     </div>
                     <p class="projects__card__text">Этот проект был разработан в качестве удобной платформой для покупки игр и подписок на эти игры</p>
@@ -117,6 +119,7 @@
                     <div class="card__h-link">
                         <h2 class="project__card__h">Veles</h2>
                         <div class="card__img">
+                            <a target="_blank" href="https://github.com/swissse/VELES"><img src="img/icons8-github-32 (1).png" alt=""></a>
                             <a target="_blank" href="https://veles-nine.vercel.app/"><img src="img/link-arr.png" alt=""></a>
                         </div>
                     </div>
@@ -128,6 +131,7 @@
                     <div class="card__h-link">
                         <h2 class="project__card__h">Eurotour</h2>
                         <div class="card__img">
+                            <a target="_blank" href="https://github.com/swissse/eurotour"><img src="img/icons8-github-32 (1).png" alt=""></a>
                             <a target="_blank" href="https://eurotour-lake.vercel.app/"><img src="img/link-arr.png" alt=""></a>
                         </div>
                     </div>
@@ -139,6 +143,7 @@
                     <div class="card__h-link">
                         <h2 class="project__card__h">Stroy Expert</h2>
                         <div class="card__img">
+                            <a target="_blank" href="https://github.com/FantyI/stroyexpert-frontend"><img src="img/icons8-github-32 (1).png" alt=""></a>
                             <a target="_blank" href="https://stroyexpert.vercel.app/"><img src="img/link-arr.png" alt=""></a>
                         </div>
                     </div>
